[package]
name = "tau-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
object = { version = "0.38.1", default-features = false, features = ["read"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = { version = "2.0" }
crc = { version = "3.4" }
gpt = { version = "4.1" }
sudo = { version = "0.6.0" }
uuid = { version = "1.20" }
anyhow = { version = "1.0" }
